# yt-watchdog-bot

./: .dockerignore  .gitignore  README.md  documentation.md  env.example  main.py  project_milestones.md  pyproject.toml
.cursor/rules/: main-rules.mdc
bot/handlers/: __init__.py
bot/middlewares/: __init__.py  access_control.py  logging.py
utils/: access_control.py  security.py
